src/test/resources/semantic_errors/readInt_as_string_arg.notc
void takesString(string s) {
}

void main() {
    takesString(readInt());
}
